header-gap-fix

--- a/style.css
+++ b/style.css
@@ -1,11 +1,14 @@
+* {
+    margin: 0px;
+    padding: 0px;
+}
+
 body {
     font-family: sans-serif;
 }
 
 ul {
     list-style-type: none;
-    margin: 0px;
-    padding: 0px;
     display: flex;
     gap: 20px;
 }
@@ -15,6 +18,7 @@ ul {
     justify-content: space-evenly;
     align-items: center;
     background-color: #1F2937;
+    padding: 16px;
 }
 
 .header-text {
